<resources>
    <string name="app_name">My Feelings</string>
    <string name="question">¿Cómo te sientes el día de hoy?</string>
    <string name="guardar">guardar</string>
    <string name="muy_feliz">Muy feliz</string>
    <string name="feliz">Feliz</string>
    <string name="neutral">Neutral</string>
    <string name="triste">Triste</string>
    <string name="muy_triste">Muy triste</string>
    <string name="todo">TODO</string>
</resources>