<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/graph">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/todo" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/question"
                android:textAlignment="center" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/options"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/verySadButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_verysad"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <ImageButton
                    android:id="@+id/sadButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_sad"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/neutralButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_neutral"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/happyButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_happy"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/veryHappyButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_veryhappy"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/guardar"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/bargraphs"
                android:columnCount="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/muy_feliz"
                    android:layout_marginEnd="15dp"
                    />
                <View
                    android:layout_height="20dp"
                    android:layout_width="250dp"
                    android:id="@+id/graphVeryHappy"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/feliz"
                    android:layout_marginEnd="15dp"
                    />
                <View
                    android:layout_height="20dp"
                    android:layout_width="250dp"
                    android:id="@+id/graphHappy"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/neutral"
                    android:layout_marginEnd="15dp"
                    />
                <View
                    android:layout_height="20dp"
                    android:layout_width="250dp"
                    android:id="@+id/graphNeutral"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/triste"
                    android:layout_marginEnd="15dp"
                    />
                <View
                    android:layout_height="20dp"
                    android:layout_width="250dp"
                    android:id="@+id/graphSad"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/muy_triste"
                    android:layout_marginEnd="15dp"
                    />
                <View
                    android:layout_height="20dp"
                    android:layout_width="250dp"
                    android:id="@+id/graphVerySad"
                    />
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>